# botguette

./: README.md  pyproject.toml
botguette/: bot.py  database.py  lobby_client.py
taskcluster/: config.yml
taskcluster/docker/botguette/: Dockerfile
taskcluster/docker/python/: Dockerfile
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/publish-image-python/: kind.yml
taskcluster/kinds/python/: kind.yml
taskcluster/kinds/webhook/: kind.yml
tests/: conftest.py  test_bot.py  test_database.py  test_lobby_client.py
